+ -> Addition
^ -> Change
- -> Removed
! -> Note

28-Jun-2010 Ian MacLennan
 # [#21180] [IE8] Cannot create new menu due to JS error
 # [#21197] session timeout while editing article in backend, keepalive issue
 # [#21201] Warning to change name of htaccess.txt when selecting mod_rewrite is missing
 # [#21213] mod_syndicate class missing
 # [#21209] Mod_stats missing class

28-Jun-2010 Jean-Marie Simonet
 # Correcting beez5 typos
 $ Correcting duplicate strings from 20602
 # [#21198] Ordering by group broken in modal. Thanks Phil.
 # [#21198] Added Hathor to the patch.
 # [#21210] * Implementing user group ordering in User Manager

27-Jun-2010 Mark Dexter
 # [#20372] components options (IE 8 test)
 # [#20793] FTP installation features not working as expected
 # Fix checkall toggle bug in User Manager caused by [#20372] 
 # [#20862] Show Profile in contact not working
 # Sample data fixes for contact (Elin Waring)
 # [#20937] non validated fields when creating banners
 # [#21079] weblink - contacts - newsfeed - new item defaults to last order position
 # [#20602] Frontened article submission - 500 - JLIB_APPLICATION_ERROR_VIEW_NOT_FOUND

27-Jun-2010 Jean-Marie Simonet
 $ Adding missing string, corrected a key
 # Corrected path typos in both beez templates component.php

26-Jun-2010 Jean-Marie Simonet
 # [#21185] Weblink edit misses filter="safehtml"
 # [#21184] Correcting and normalizing custom html module edit display
 # [#21168] [image file] Missing image file in Hathor. Thanks Andrea
 # [#21157] Unable to filter template styles with number in it (eg: Beez5, beez_20) Thank CY Lee
 # [#21147] No articles in this category when display# changed to "All". Thanks Alain.
 # [#21151] com_content manifest in error or file missing. Thanks Boris and Bill.

24-Jun-2010 Jean-Marie Simonet
 $ Completing string value
[#21173] Default ACL for editors and publishers is incorrect, also weblinks. Thanks Elin.
 $ Correcting Web Link menu Item value (Front-end can't edit).
