@@ -33,6 +33,7 @@ $ -> Language fix or change
  # [#21201] Warning to change name of htaccess.txt when selecting mod_rewrite is missing
  # [#21213] mod_syndicate class missing
  # [#21209] Mod_stats missing class
+ # [#21136] Missing JBrowser isMobile
 
 28-Jun-2010 Jean-Marie Simonet
  # Correcting beez5 typos
